[build-system]
requires = ["setuptools>=82.0.1",
            "setuptools_scm[toml]>=10.0.5",
            # needed to compile the gettext (.po -> .mo) translation catalogs
            # at build time (see the build_py hook in setup.py)
            "Babel>=2.10",
            "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ginga/version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
target-version = "py311"
# files not linted: demo notebooks and the pyodide top-level-await examples
extend-exclude = ["*.ipynb", "ginga/examples/pg/pyscript"]

[tool.ruff.lint]
# match flake8's coverage: pycodestyle (E/W) + pyflakes (F)
select = ["E", "F", "W"]
ignore = [
    "E265",  # block comment should start with '# '
    "E266",  # too many leading '#' for block comment
    "E402",  # module level import not at top of file
    "E741",  # ambiguous variable name 'l'
    "E501",  # line too long
    "F841",  # local variable assigned to but never used
]

