[tool:pytest]
minversion = 3
testpaths = "ginga" "doc"
norecursedirs = build doc/_build
astropy_header = true
addopts = -p no:warnings

[bdist_wheel]
universal = 1

[metadata]
name = ginga
description = A scientific image viewer and toolkit
long_description = file: LONG_DESC.txt
long_description_content_type = text/plain
author = Ginga Maintainers
author_email = eric@naoj.org
license = BSD
license_file = LICENSE.txt
url = https://ejeschke.github.io/ginga/
edit_on_github = False
github_project = ejeschke/ginga
keywords = scientific, image, viewer, numpy, toolkit, astronomy, FITS
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
install_requires = numpy>=1.13; qtpy>=1.1; astropy>=3
setup_requires = setuptools_scm

[options.extras_require]
recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=1.5.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2
test = attrs>=19.2.0; pytest-astropy
docs = sphinx-astropy
gtk3 = pycairo; pygobject
qt5 = PyQt5; QtPy>=1.1
tk = aggdraw
web = tornado; aggdraw

[options.package_data]
ginga = examples/*/*, web/pgw/js/*.js, web/pgw/js/*.css
ginga.doc = *.html
ginga.fonts = */*.ttf, */*.txt
ginga.gtk3w = gtk_css
ginga.icons = *.ppm, *.png
ginga.opencl = trcalc.cl
ginga.tests = coveragerc
ginga.web.pgw = templates/*.html, js/*.js

[options.entry_points]
console_scripts =
    ginga = ginga.rv.main:_main
    ggrc = ginga.misc.grc:_main

[flake8]
# Ignoring these for now:
# E129: visually indented line with same indent as next logical line
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# I100: import statements are in the wrong order
# I101: imported names are in the wrong order
# W504: line break after binary operator
# F841: local variable '%s' is assigned to but never used
ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
