[tool:pytest]
minversion = 5
testpaths = "ginga" "doc"
norecursedirs = build doc/_build
astropy_header = true
addopts = --doctest-ignore-import-errors
filterwarnings =
    error
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:numpy.ufunc size changed:RuntimeWarning

[bdist_wheel]
universal = 1

[metadata]
name = ginga
description = A scientific image viewer and toolkit
long_description = file: LONG_DESC.txt
long_description_content_type = text/plain
author = Ginga Maintainers
author_email = eric@naoj.org
license = BSD
license_file = LICENSE.txt
url = https://ejeschke.github.io/ginga/
edit_on_github = False
github_project = ejeschke/ginga
keywords = scientific, image, viewer, numpy, toolkit, astronomy, FITS
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.14
    qtpy>=1.1
    astropy==4.3rc1
    importlib-metadata ; python_version == '3.7'
setup_requires = setuptools_scm

[options.extras_require]
recommended =
    pillow>=3.2.0
    scipy>=0.18.1
    matplotlib>=2.1
    opencv-python>=3.4.1
    piexif>=1.0.13
    beautifulsoup4>=4.3.2
    astroquery>=0.3.5
    docutils
    photutils
test = attrs>=19.2.0; pytest-astropy
docs = sphinx-astropy; sphinx_rtd_theme
gtk3 = pycairo; pygobject
qt5 = PyQt5; QtPy>=1.1
tk = aggdraw
web = tornado; aggdraw

[options.package_data]
ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
ginga.doc = *.html
ginga.fonts = */*.ttf, */*.txt
ginga.gtk3w = gtk_css
ginga.icons = *.ppm, *.png
ginga.opengl = glsl/*.vert, glsl/*.frag
ginga.web.pgw = templates/*.html, js/*.js

[options.entry_points]
console_scripts =
    ginga = ginga.rv.main:_main
    ggrc = ginga.misc.grc:_main

[flake8]
# Ignoring these for now:
# E129: visually indented line with same indent as next logical line
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# I100: import statements are in the wrong order
# I101: imported names are in the wrong order
# W504: line break after binary operator
# F841: local variable '%s' is assigned to but never used
ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841

[coverage:run]
source = ginga
omit =
    ginga/_astropy_init*
    ginga/cython_version*
    ginga/setup_package*
    ginga/*/setup_package*
    ginga/*/*/setup_package*
    ginga/tests/*
    ginga/*/tests/*
    ginga/*/*/tests/*
    ginga/version*
    */ginga/_astropy_init*
    */ginga/cython_version*
    */ginga/setup_package*
    */ginga/*/setup_package*
    */ginga/*/*/setup_package*
    */ginga/tests/*
    */ginga/*/tests/*
    */ginga/*/*/tests/*
    */ginga/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
