[tool:pytest]
minversion = 5
testpaths = "ginga" "doc"
norecursedirs = build doc/_build
astropy_header = true
filterwarnings =
    error
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
    # matplotlib + python-dateutil<=2.8.2 + Python 3.12
    ignore:datetime\.datetime\.utcfromtimestamp:DeprecationWarning

[bdist_wheel]
universal = 1

[metadata]
name = ginga
description = A scientific image viewer and toolkit
long_description = file: LONG_DESC.txt
long_description_content_type = text/plain
author = Ginga Maintainers
author_email = eric@naoj.org
license = BSD
license_files = LICENSE.txt
url = https://ejeschke.github.io/ginga/
edit_on_github = False
github_project = ejeschke/ginga
keywords = scientific, image, viewer, numpy, toolkit, astronomy, FITS
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    qtpy>=2.0.1
    astropy>=5.0
    puremagic>=1.23
    pillow>=9.2
    pyyaml>=6.0
    tomli>=2.0.1; python_full_version < '3.11.0a7'
    packaging>=23.1
setup_requires = setuptools_scm

[options.extras_require]
recommended =
    scipy>=0.18.1
    matplotlib>=3.4
    opencv-python>=4.5.4.58
    exifread>=2.3.2
    astroquery>=0.3.5
    python-dateutil>=2.8.2
    photutils
test =
    attrs>=19.2.0
    pytest-astropy-header
    pytest-doctestplus
    pytest-remotedata
    scipy
    photutils
docs =
    sphinx
    sphinx-astropy
    sphinx_rtd_theme
gtk3 =
    pycairo
    pygobject
qt5 =
    PyQt5
qt6 =
    PyQt6
pyside2 =
    PySide2
pyside6 =
    PySide6
tk =
    pycairo
web =
    tornado
    pycairo

[options.package_data]
ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
ginga.doc = *.html
ginga.fonts = */*.ttf, */*.txt
ginga.gtk3w = gtk_css
ginga.icons = *.ppm, *.png, *.svg
ginga.cursors = *.svg, *.toml
ginga.opengl = glsl/*.vert, glsl/*.frag
ginga.web.pgw = templates/*.html, js/*.js
ginga.locale = */LC_MESSAGES/*.mo

[options.entry_points]
console_scripts =
    ginga = ginga.rv.main:_main
    ggrc = ginga.misc.grc:_main

ginga_modes =
    meta = ginga.modes.meta:MetaMode
    draw = ginga.modes.draw:DrawMode
    pan = ginga.modes.pan:PanMode
    zoom = ginga.modes.zoom:ZoomMode
    cuts = ginga.modes.cuts:CutsMode
    contrast = ginga.modes.contrast:ContrastMode
    rotate = ginga.modes.rotate:RotateMode
    cmap = ginga.modes.cmap:CMapMode
    dist = ginga.modes.dist:DistMode
    camera = ginga.modes.camera:CameraMode
    naxis = ginga.modes.naxis:NaxisMode

ginga_loaders =
    pillow = ginga.util.io.io_rgb:PillowFileHandler
    opencv = ginga.util.io.io_rgb:OpenCvFileHandler
    astropy = ginga.util.io.io_fits:AstropyFitsFileHandler
    fitsio = ginga.util.io.io_fits:FitsioFileHandler
    asdf = ginga.util.io.io_asdf:ASDFFileHandler

# for Babel
[extract_messages]
input_dirs = ginga
output_file = ginga/locale/ginga.pot

# for Babel
[compile_catalog]
domain = ginga
directory = ginga/locale

[flake8]
# Ignoring these for now:
# E129: visually indented line with same indent as next logical line
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# I100: import statements are in the wrong order
# I101: imported names are in the wrong order
# W504: line break after binary operator
# F841: local variable '%s' is assigned to but never used
ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841

[coverage:run]
source = ginga
omit =
    ginga/_astropy_init*
    ginga/cython_version*
    ginga/setup_package*
    ginga/*/setup_package*
    ginga/*/*/setup_package*
    ginga/tests/*
    ginga/*/tests/*
    ginga/*/*/tests/*
    ginga/version*
    */ginga/_astropy_init*
    */ginga/cython_version*
    */ginga/setup_package*
    */ginga/*/setup_package*
    */ginga/*/*/setup_package*
    */ginga/tests/*
    */ginga/*/tests/*
    */ginga/*/*/tests/*
    */ginga/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
